<resources>
    <string name="app_name">Memory</string>
    <string name="addPicture">Take new picture!</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_picture">Save Picture</string>
    <string name="picture_that_got_taken">Picture that got taken</string>
    <string name="cancel">Cancel</string>
    <string name="logbook_btn">Send to logbook</string>
    <string name="confirmation_title">Are you sure you want to submit this solution?</string>
    <string name="confirmation_save">Yes save</string>
    <string name="clearall_title">Are you sure you want to delete the images</string>
    <string name="clearall_save">Yes clear all</string>
    <string name="clearall_btn">Remove all</string>
    <string name="clearconstraint_title">Are you sure you want to delete the memory constraints</string>
    <string name="clearconstraints_save">Yes remove constraints</string>
    <string name="clearconstraints_btn">Remove constraints</string>
    <string name="add_new_card">Add new Card</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
</resources>